--- a/Dijitalbenchmark.html
+++ b/Dijitalbenchmark.html
@@ -172,9 +172,7 @@
             { id: 302, company: "Emirates SkyCargo", product: "CargoAI", subCategory: "Dijital Satış Kanalı", category: "Müşteri Odaklı Çözümler", description: "Pazar yeri entegrasyonu ile müşteri erişimi.", link: "https://cargonow.world/emirates-skycargo-advances-its-digital-customer-experience-with-cargoai/" },
             { id: 303, company: "Emirates SkyCargo", product: "SkyChain", subCategory: "Dijital Müşteri Portalı", category: "Müşteri Odaklı Çözümler", description: "Gerçek zamanlı kargo yönetimi.", link: "https://www.freightwaves.com/news/emirates-skycargo-launches-new-cargo-management-system" },
             { id: 304, company: "Emirates SkyCargo", product: "cargo.one Ortaklığı", subCategory: "Dijital Satış Kanalı", category: "Müşteri Odaklı Çözümler", description: "Dijital rezervasyon platformu entegrasyonu.", link: "https://aircargoweek.com/emirates-skycargo-is-now-live-on-cargo-one/" },
-            { id: 305, company: "Emirates SkyCargo", product: "Emirates OpenAI", subCategory: "ChatBot", category: "Teknolojik İş Birlikleri ve Yenilikler", description: "Emirates Grubu, operasyonlarında yapay zekanın benimsenmesini ve entegrasyonunu hızlandırmak amacıyla OpenAI ile stratejik bir ortaklık kurduğunu duyurmuştur. Emirates Grubu havayolu genelinde OpenAI’ın kurumsal ölçekli ve yüksek güvenlikli “ChatGPT Enterprise” modeline erişim sağlanmasını ve söz konusu teknolojinin operasyonel verimlilikten müşteri hizmetlerine kadar birçok alanda kullanılmasını planlamaktadır.
-", link: "https://www.emirates.com/media-centre/emirates-group-collaborates-with-openai-to-accelerate-ai-adoption-and-innovation/" },
-
+            { id: 305, company: "Emirates SkyCargo", product: "Emirates OpenAI", subCategory: "ChatBot", category: "Teknolojik İş Birlikleri ve Yenilikler", description: "Emirates Grubu, operasyonlarında yapay zekanın benimsenmesini ve entegrasyonunu hızlandırmak amacıyla OpenAI ile stratejik bir ortaklık kurduğunu duyurmuştur. Emirates Grubu havayolu genelinde OpenAI’ın kurumsal ölçekli ve yüksek güvenlikli “ChatGPT Enterprise” modeline erişim sağlayıp OpenAI ile ortak çalışmalar sürdüreceğini duyurdu.", link: "https://www.emirates.com/media-centre/emirates-group-collaborates-with-openai-to-accelerate-ai-adoption-and-innovation/" },
 
 
             // CATHAY PACIFIC CARGO
@@ -555,4 +553,5 @@
     </script>
 </body>
 </html>
+
 
